# OpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  OpenGL.sln  Proc.cs  Program.cs  README.md
Generator/: CMakeLists.txt  Extensions.cs  Generator.csproj  Program.cs  Registry.cs  gl.cpp.in  gl.h.in  gles.cpp.in  gles.h.in  header.template  source.cpp.in  source.cpp.template  source.h.in  source.h.template  source.template
Generator/Files/: gl.cpp.in  gl.h.in  gles.cpp.in  gles.h.in
Generator/Properties/: AssemblyInfo.cs
Test/: CMakeLists.txt  Test.cpp  Test.vcxproj  Test.vcxproj.filters
