project(OpenGL LANGUAGES CXX CSharp)

set(CMAKE_DOTNET_TARGET_FRAMEWORK_VERSION "v4.7.2")
set(CMAKE_CSharp_FLAGS "/langversion:7.1")

include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

add_subdirectory(Generator)
add_subdirectory(Test)
